# pyupgw

./: .env.sample  .pylintrc  .readthedocs.yaml  CHANGELOG.rst  LICENSE  README.rst  pyproject.toml  tox.ini
docs/: api.rst  conf.py  developing.rst  index.rst
pyupgw/: __init__.py  __main__.py  _api.py  _helpers.py  _mqtt.py  api.py  client.py  device.py  errors.py  gateway.py  models.py
pyupgw/cli/: __init__.py  _logging.py  commands.py  tui.py
tests/: test_client.py  test_models.py
