[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pyupgw"
authors = [{name = "Jaakko Moisio", email = "jaakko@moisio.fi"}]
license = {file = "LICENSE"}
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Intended Audience :: Developers",
  "Topic :: Internet",
  "Topic :: Home Automation",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
readme = "README.rst"
dynamic = ["version", "description"]
dependencies = [
  "pycognito",
  "awscrt",
  "attrs",
  "dict-deep",
  "aiohttp",
  "paho-mqtt>=2,<3",
]
requires-python=">=3.11"

[project.optional-dependencies]
dev = [
  "ruff>=0.2.2",
  "mypy>=1.7",
  "pytest>=7.4.3,<8",
  "pytest-asyncio>=0.23.2",
  "hypothesis>=6.92.1",
  "tox>=4.11.4",
  "coverage>=7.4",
  "types-PyYAML"
]

doc = [
  "sphinx>=7.2.6",
  "sphinx-rtd-theme"
]

cli = [
  "python-dotenv",
  "click",
  "rich",
  "rich-click",
  "blessed",
  "jsonformatter",
  "PyYAML",
]

[project.urls]
Source = "https://github.com/jasujm/pyupgw"
Documentation = "https://pyupgw.readthedocs.io/"

[project.scripts]
pyupgw = "pyupgw.__main__:main"

[tool.ruff.lint]
select = ["I", "F", "W", "E", "PL"]
ignore = ["E501"]

[tool.mypy]
ignore_missing_imports = true

[tool.coverage.run]
omit = [
  "pyupgw/_api.py",
  "pyupgw/_mqtt.py",
  "pyupgw/__main__.py",
  "pyupgw/cli/*.py",
]
